# docs/swagger.json
@@ -51,7 +51,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LogoutReq"
+                            "$ref": "#/definitions/dto.RenewAccessTokenReq"
                         }
                     }
                 ],
@@ -127,6 +127,11 @@
         },
         "/v1/user/logout": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -137,17 +142,6 @@
                     "User"
                 ],
                 "summary": "用户注销",
-                "parameters": [
-                    {
-                        "description": "注销请求信息",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.LogoutReq"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -212,13 +206,13 @@
                 }
             }
         },
-        "dto.LogoutReq": {
+        "dto.RenewAccessTokenReq": {
             "type": "object",
             "required": [
-                "session_id"
+                "refresh_token"
             ],
             "properties": {
-                "session_id": {
+                "refresh_token": {
                     "type": "string"
                 }
             }
